
[TestKitzNoTypeAssertionRule/invalid-0 - 1]
Diagnostic 1: noTypeAssertion (3:10 - 3:21)
Message: Remove assertion casts; use schema decode/typed constructors.
   2 | function simple<T>(value: T): T {
   3 |   return value as any
     |          ~~~~~~~~~~~~
   4 | }
---

[TestKitzNoTypeAssertionRule/invalid-1 - 1]
Diagnostic 1: noTypeAssertion (5:25 - 5:36)
Message: Remove assertion casts; use schema decode/typed constructors.
   4 | ): T extends readonly [infer Head, ...infer Tail] ? Head : T {
   5 |   const copy: unknown = value as any
     |                         ~~~~~~~~~~~~
   6 |   return value
---

[TestKitzNoTypeAssertionRule/invalid-2 - 1]
Diagnostic 1: noTypeAssertion (5:17 - 5:28)
Message: Remove assertion casts; use schema decode/typed constructors.
   4 | ): T extends readonly [infer Head, ...infer Tail] ? Head : T {
   5 |   const local = value as any
     |                 ~~~~~~~~~~~~
   6 |   return value
---

[TestKitzNoTypeAssertionRule/invalid-3 - 1]
Diagnostic 1: noTypeAssertion (3:10 - 3:24)
Message: Remove assertion casts; use schema decode/typed constructors.
   2 | function nonAny(value: unknown) {
   3 |   return value as string
     |          ~~~~~~~~~~~~~~~
   4 | }
---
